--- a/config.json
+++ b/config.json
@@ -20,7 +20,7 @@
         "Description": "(⊙o⊙)？"
     },
     "site": {
-        "Path": "http://localhost:7891/",
+        "Path": "http://8.137.125.12:7891/",
         "Title": "这里是Ao的博客",
         "Icon": "https://leafbackaut.cn/file/tomato.ico",
         "Bili": "https://space.bilibili.com/699419214",
